--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
        
         <section class="wrapper">
             <div class="div-1">
-                <p>I was born and raised in NYC, but my real roots reach to South America. I owe my travel bug to being a first generation
+                <p>I was born and raised in NYC, but <span>my real roots</span> reach to South America. I owe my travel bug to being a first generation
                     American with family all over the world - we were always on the go! 
                 </p>
             </div>
 
             <div class="div-2">
-                <p>My passion: I <span class="uppercase">love</span> music - it's one of the most powerful and diverse methods for expression
+                <p><span>My passion:</span> I LOVE music - it's one of the most powerful and diverse methods for expression
                     &#38; communication. In the meantime, I get my fix by going to lots &#38; lots of concerts. I'm at 160 and counting!
                 </p>
             </div>
             
             <div class="div-3">
-                <p>A fun fact: As a true New Yorker, I'm slightly embarrassed to say that I only learned how to ride a plain ol' stationary
+                <p><span>A fun fact:</span> As a true New Yorker, I'm slightly embarrassed to say that I only learned how to ride a plain ol' stationary
                     bike 1 year ago, and have yet to learn to drive. But, the real takeaway is that I'm learning!
                 </p>
             </div>
