--- a/index.html
+++ b/index.html
@@ -13,32 +13,51 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-        <link href='http://fonts.googleapis.com/css?family=Lora:700' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400' rel='stylesheet' type='text/css'>
     </head>
     <body>
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
        
-        <section class="wrapper">
-            <div class="div-1">
+        <section class="flex-container">
+            <header>
+                <h1>Hi. I'm Aisha.</h1>
+            </header>
+
+            <main>
+                <p>I am a <span>Responsive Designer &#38; Developer</span> who thrives on visual storytelling. When I'm not working, pursuing
+                    side projects or getting lost in the rabbit hole of blogs &#38; books, I can be found traveling, hiking and searching for  
+                    new stories. 
+                </p>
+            </main>
+
+            <div id="div-1" class="flex-items">
                 <p>I was born and raised in NYC, but <span>my real roots</span> reach to South America. I owe my travel bug to being a first generation
                     American with family all over the world - we were always on the go! 
                 </p>
             </div>
 
-            <div class="div-2">
+            <div id="div-2" class="flex-items">
                 <p><span>My passion:</span> I LOVE music - it's one of the most powerful and diverse methods for expression
                     &#38; communication. In the meantime, I get my fix by going to lots &#38; lots of concerts. I'm at 160 and counting!
                 </p>
             </div>
             
-            <div class="div-3">
+            <div id="div-3" class="flex-items">
                 <p><span>A fun fact:</span> As a true New Yorker, I'm slightly embarrassed to say that I only learned how to ride a plain ol' stationary
                     bike 1 year ago, and have yet to learn to drive. But, the real takeaway is that I'm learning!
                 </p>
             </div>
+
+            <footer>
+                <ul>
+                    <li><a href="https://twitter.com" target="_blank"><img src="img/twitter.png" alt="twitter icon" /></a></li>
+                    <li><a href="https://linkedin.com" target="_blank"><img src="img/linkedin.jpeg" alt="linkedin icon" /></a></li>
+                    <li><a href="https://pinterest.com" target="_blank"><img src="img/pinterest.png" alt="pinterest icon" /></a></li>
+                </ul>
+            </footer>
         </section>    
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
